# e-library

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
backend/src/: config.rs  main.rs  routes.rs
backend/src/analytics/: handlers.rs  mod.rs  models.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs
backend/src/catalog/: handlers.rs  mod.rs  models.rs
backend/src/db/: connection.rs  mod.rs
backend/src/reader/: handlers.rs  mod.rs
backend/src/reader/formats/: epub.rs  mobi.rs  pdf.rs
deployment/config/: php.ini
frontend/: index.php
frontend/assets/css/: main.css  reader.css  responsive.css
frontend/assets/js/: app.js  auth.js  catalog.js  offline.js  reader.js
frontend/components/: book-card.php  footer.php  header.php  sidebar.php
frontend/includes/: api.php  config.php  db.php  functions.php
frontend/pages/: 404.php  503.php  catalog.php  home.php  login.php  profile.php  reader.php
frontend/pwa/: manifest.json  service-worker.js
