[package]
name = "e-library-backend"
version = "0.1.0"
edition = "2021"
authors = ["Developer"]

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"

# Authentication
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"

# Database
tokio-postgres = "0.7.10"
deadpool-postgres = "0.10.5"
postgres-types = { version = "0.2.6", features = ["derive"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Book formats handling
epub = "2.0.0"
pdf = "0.8.1"
mobi = "0.7.0"

# Utilities
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
chrono = { version = "0.4.30", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures = "0.3.28"
thiserror = "1.0.48"
config = "0.13.3"
tokio = { version = "1.32.0", features = ["full"] }